Update Rental System demo